--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Vocation</string>
     <string name="nazva">Українські вибори</string>
+    <string name="lname">Прізвище</string>
+    <string name="fname">Ім\'я</string>
+    <string name="id">ID паспорта</string>
+    <string name="Login">Вхід</string>
 </resources>
