--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="id">ID паспорта</string>
     <string name="Login">Вхід</string>
     <string name="available_votings">Доступні вибори</string>
+    <string name="date">Дата:</string>
 </resources>
